[gd_scene load_steps=8 format=3 uid="uid://crnf0w0s44hxx"]

[ext_resource type="PackedScene" path="res://addons/scene_manager/editor/label.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://ivkx00aag348" path="res://addons/scene_manager/icons/FileDialog.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://dbtlwmxj4c644" path="res://addons/scene_manager/icons/Reload.svg" id="5_2r30m"]
[ext_resource type="Texture2D" uid="uid://bnwaksnompvr7" path="res://addons/scene_manager/icons/Save.svg" id="5_yw87d"]
[ext_resource type="Script" path="res://addons/scene_manager/editor/manager.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://d1a02j2vpxq5f" path="res://addons/scene_manager/icons/FolderActive.svg" id="7_3r2fd"]
[ext_resource type="Texture2D" uid="uid://bpjecrtgui38m" path="res://addons/scene_manager/icons/GuiChecked.svg" id="7_d04a5"]

[node name="root_container" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6")

[node name="main_container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="scenes" type="ScrollContainer" parent="main_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="tab_container" type="TabContainer" parent="main_container/scenes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
drag_to_rearrange_enabled = true

[node name="add_category_container" type="MarginContainer" parent="main_container"]
layout_mode = 2
size_flags_vertical = 8

[node name="add_category_container" type="HBoxContainer" parent="main_container/add_category_container"]
layout_mode = 2

[node name="section_name" type="LineEdit" parent="main_container/add_category_container/add_category_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="main_container/add_category_container/add_category_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="add_subsection" type="Button" parent="main_container/add_category_container/add_category_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "+ SubList"

[node name="add_section" type="Button" parent="main_container/add_category_container/add_category_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "+ List"

[node name="separator" type="HSeparator" parent="main_container"]
layout_mode = 2

[node name="includes" type="VBoxContainer" parent="main_container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="container" type="VBoxContainer" parent="main_container/includes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="_title" type="HBoxContainer" parent="main_container/includes/container"]
layout_mode = 2

[node name="delete_list" type="Button" parent="main_container/includes/container/_title"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
disabled = true

[node name="scenes" parent="main_container/includes/container/_title" instance=ExtResource("2")]
layout_mode = 2
text = "Includes:"
vertical_alignment = 1

[node name="includes" type="ScrollContainer" parent="main_container/includes/container"]
layout_mode = 2
size_flags_vertical = 3

[node name="include_list" type="VBoxContainer" parent="main_container/includes/container/includes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="include_panel" type="VBoxContainer" parent="main_container/includes"]
layout_mode = 2

[node name="include_interactive_section_container" type="MarginContainer" parent="main_container/includes/include_panel"]
layout_mode = 2
size_flags_vertical = 8

[node name="add_include_container" type="HBoxContainer" parent="main_container/includes/include_panel/include_interactive_section_container"]
layout_mode = 2

[node name="dialog_add_include_container" type="HBoxContainer" parent="main_container/includes/include_panel/include_interactive_section_container/add_include_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="file_dialog" type="FileDialog" parent="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container"]
title = "Open a File or Directory"
size = Vector2i(303, 180)
ok_button_text = "Open"
file_mode = 3
filters = PackedStringArray("*.tscn")

[node name="file_dialog_button" type="Button" parent="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
icon = ExtResource("3")

[node name="address" type="LineEdit" parent="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="dialog_add_include_container2" type="HBoxContainer" parent="main_container/includes/include_panel/include_interactive_section_container/add_include_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="add" type="Button" parent="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container2"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Add"

[node name="hide" type="Button" parent="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container2"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("7_d04a5")
metadata/enabled = true

[node name="separator" type="HSeparator" parent="main_container/includes/include_panel"]
layout_mode = 2

[node name="interactive_section_container" type="VBoxContainer" parent="main_container"]
layout_mode = 2

[node name="margin_refresh_save_container" type="MarginContainer" parent="main_container/interactive_section_container"]
layout_mode = 2
size_flags_vertical = 0

[node name="refresh_save_container" type="VBoxContainer" parent="main_container/interactive_section_container/margin_refresh_save_container"]
layout_mode = 2

[node name="save_refresh_container" type="HBoxContainer" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="refresh" type="Button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh"
icon = ExtResource("5_2r30m")

[node name="save_container" type="HBoxContainer" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="save" type="Button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/save_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
disabled = true
text = "Save"
icon = ExtResource("5_yw87d")

[node name="hide_unhide" type="Button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/save_container"]
visible = false
layout_mode = 2
focus_mode = 0
icon = ExtResource("7_d04a5")
metadata/enabled = true

[node name="auto_save_refresh_container" type="HBoxContainer" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="auto_save" type="Button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/auto_save_refresh_container"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "If some scene properties update (edit, delete, change list or sublist of a scene and ...), save happens automatically."
focus_mode = 0
text = "Auto Save"
icon = ExtResource("7_d04a5")
metadata/enabled = true

[node name="auto_refresh" type="Button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/auto_save_refresh_container"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "If checked, \"SceneManager\" will listen to \"FileSystem\" changes in godot and refreshes the UI tool automatically.
It will save after the refresh if \"Auto Save\" is active too."
focus_mode = 0
text = "Reactive"
icon = ExtResource("7_3r2fd")
metadata/enabled = true

[node name="accept_dialog" type="AcceptDialog" parent="."]
dialog_autowrap = true

[connection signal="tab_changed" from="main_container/scenes/tab_container" to="." method="_on_tab_container_tab_changed"]
[connection signal="text_changed" from="main_container/add_category_container/add_category_container/section_name" to="." method="_on_section_name_text_changed"]
[connection signal="button_up" from="main_container/add_category_container/add_category_container/HBoxContainer/add_subsection" to="." method="_on_add_subsection_button_up"]
[connection signal="button_up" from="main_container/add_category_container/add_category_container/HBoxContainer/add_section" to="." method="_on_add_section_button_up"]
[connection signal="dir_selected" from="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container/file_dialog" to="." method="_on_file_dialog_dir_file_selected"]
[connection signal="file_selected" from="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container/file_dialog" to="." method="_on_file_dialog_dir_file_selected"]
[connection signal="button_up" from="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container/file_dialog_button" to="." method="_on_file_dialog_button_button_up"]
[connection signal="text_changed" from="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container/address" to="." method="_on_address_text_changed"]
[connection signal="button_up" from="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container2/add" to="." method="_on_add_button_up"]
[connection signal="button_up" from="main_container/includes/include_panel/include_interactive_section_container/add_include_container/dialog_add_include_container2/hide" to="." method="_on_hide_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/refresh" to="." method="_on_refresh_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/save_container/save" to="." method="_on_save_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/save_container/hide_unhide" to="." method="_on_hide_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/auto_save_refresh_container/auto_save" to="." method="_on_auto_save_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/auto_save_refresh_container/auto_refresh" to="." method="_on_auto_refresh_button_up"]
